--- a/asserts/category-pay.css
+++ b/asserts/category-pay.css
@@ -1,8 +1,7 @@
 :root {
     --main-text-font: Arial, Helvetica, sans-serif;
 }
-
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -12,23 +11,19 @@
 p {
     font-family: var(--main-text-font);
 }
-
 li {
     list-style: none;
 }
-
 a {
     text-decoration: none;
     color: #338dbc;
 
 }
-
 .row {
     display: flex;
     flex-wrap: wrap;
 
 }
-
 .top {
     height: 30px;
     color: white;
@@ -37,46 +32,36 @@ a {
     align-items: center;
     padding-left: 20px;
 }
-
 .top span {
     font-size: 16px;
     padding: 0 10px;
 }
-
 .top p {
     font-size: 14px;
 }
-
-.img-main img {
+.img-main img{
     width: 100%;
 
 }
-
 .between {
     margin: 50px;
 }
-
 .left {
     width: 20%;
 }
-
 .price p {
     font-size: 18px;
     padding: 20px 0;
 }
-
 .price label {
     font-size: 15px;
 }
-
 .size {
-    padding-top: 20px;
+    padding-top: 20px ;
 }
-
 .size p {
     font-size: 17px;
 }
-
 .so-size span {
     display: inline-block;
     padding: 5px 10px;
@@ -85,7 +70,6 @@ a {
     cursor: pointer;
     font-size: 15px;
 }
-
 .right {
     width: 80%;
 }
@@ -97,12 +81,10 @@ a {
     font-weight: bold;
     padding-top: 10px;
 }
-
 .name {
     flex: 1;
     padding: 0 12px;
 }
-
 .name select {
     width: 100%;
     padding: 10px 15px;
@@ -112,24 +94,21 @@ a {
     border: 1px solid #dddddd;
     cursor: pointer;
     border: none;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid black ;
     font-size: 18px;
 }
-
 .content {
     margin-top: 20px;
-    justify-content: space-between;
+    justify-content: space-between ;
 
 }
-
 .content a {
     width: 25%;
 }
-
 .content-item {
     /* width: calc(25% - 50px); */
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 15px ;
     padding: 10px;
     width: 100%;
     box-shadow: 1px 1px 1px 1px rgb(219, 217, 217);
@@ -137,14 +116,12 @@ a {
     border-radius: 4px;
 
 }
-
 .content-item-active {
     position: relative;
 }
-
 .sale-div {
     position: absolute;
-    top: 20px;
+    top:20px;
     right: 20px;
     background-color: red;
     box-shadow: 3px 4px 5px #000;
@@ -158,43 +135,36 @@ a {
     transform: translateY(-3px) scale(1.05);
     box-shadow: 0 4px 5px #ccc;
 }
-
 .content-item h1 {
     font-size: 15px;
     font-family: var(--main-text-font);
     margin-top: 6px;
     color: #333;
 }
-
 .content-item img {
     width: 100%;
     height: 100%;
     border-radius: 4px;
 }
-
 .content-item p {
     font-size: 14px;
 }
-
 .content a .content-item p {
     color: black;
 }
-
 .right-bottom {
     text-align: center;
     justify-content: space-between;
     margin: 30px 0 20px;
     width: 100%;
 }
-
 .right-bottom span {
     padding: 10px;
     font-weight: 600;
     font-size: 100%;
 
 }
-
-.list-inline {
+.list-inline{
     margin: 50px 0;
 
 }
@@ -206,16 +176,13 @@ a {
 
 
 }
-
 .list-inline {
     padding-left: 500px;
 
 }
-
 .pagination-item {
     margin-right: 25px;
 }
-
 .pagination-item a {
 
     --height: 30px;
@@ -231,7 +198,6 @@ a {
     border-radius: 2px;
 
 }
-
 .pagination-item-active {
     background-color: #c0442f;
 }
@@ -245,7 +211,6 @@ a {
     color: var(--text-color);
 
 }
-
 .pagination-item:hover {
     background-color: #ccc;
 }
@@ -253,11 +218,9 @@ a {
 .pagination-item-active {
     color: #000;
 }
-
 .bottom {
     border-bottom: 2px solid black;
 }
-
 /* --------------------------------------------------Thanh Toán--------------------------------------- */
 input {
     border-radius: 4px;
@@ -272,7 +235,6 @@ input {
     width: 60%;
     border-right: 1px solid rgb(141, 139, 139);
 }
-
 .pay-left {
     margin: auto;
     width: 90%;
@@ -280,34 +242,28 @@ input {
 }
 
 .left-name {
-    padding-top: 50px;
+    padding-top: 50px ;
 }
-
 .left-name h1 {
     font-family: var(--main-text-font);
     padding-left: 20px;
 
 }
-
 .topic {
 
     padding: 5px;
 }
-
 .topic p {
     padding: 0 12px;
     font-size: 12px;
     padding-left: 10px;
 }
-
-.topic-p {
+.topic-p{
     padding-left: 22px;
 }
-
 .topic p:nth-child(5) {
     color: #dddddd
 }
-
 .topic h2 {
     padding-left: 20px;
     font-weight: normal;
@@ -318,12 +274,10 @@ input {
 .left-text {
     padding: 10px 20px;
 }
-
 .left-text p {
     padding-left: 20px;
     font-size: 14px;
 }
-
 .input {
     padding: 0 10px;
 }
@@ -331,9 +285,8 @@ input {
 .input li {
     padding: 10px;
 }
-
-.input input {
-    width: 100%;
+.input input{
+    width: 98%;
     padding: 10px 15px;
     justify-content: space-between;
     background-color: #fff;
@@ -341,29 +294,26 @@ input {
     cursor: pointer;
 
 }
-
 .thongtin {
     width: 100%;
+    padding-left: 13px;
 }
-
 .mail {
-    width: 100%;
+    width: 70%;
 }
-
-.mail input {
+.mail input{
     width: 100%;
     padding: 10px 15px;
     justify-content: space-between;
     background-color: #fff;
     border: 1px solid #dddddd;
     cursor: pointer;
-}
 
+}
 .sdt {
-    width: 100%;
+    width: 30%;
 }
-
-.sdt input {
+.sdt input{
     width: 100%;
     padding: 10px 15px;
     justify-content: space-between;
@@ -371,21 +321,19 @@ input {
     border: 1px solid #dddddd;
     cursor: pointer;
 }
-
-.select-addr {
+.select-addr{
     width: 100%;
 
 }
-
 .diachi {
-    padding: 10px 20px;
+    padding:10px 20px;
     width: 100%;
 
 
 }
 
 .diachi input {
-    width: 100%;
+    width: 98%;
     padding: 10px 15px;
     justify-content: space-between;
     background-color: #fff;
@@ -394,28 +342,24 @@ input {
     border-radius: 4px;
 
 }
-
 .left-button {
     font-family: var(--main-text-font);
-    padding: 15px 60px;
+    padding:  15px 60px;
     align-items: center;
 
 }
-
 .gio-hang {
     flex: 1;
 }
-
 .gio-hang p {
     font-size: 12px;
 }
-
 .button-pay {
 
     width: 50%;
 }
 
-.button-pay button {
+.button-pay button{
     width: 100%;
     padding: 10px 15px;
     height: 50px;
@@ -424,28 +368,24 @@ input {
     color: #fff;
     border: 1px solid #dddddd;
     cursor: pointer;
-    border-radius: 50px;
+    border-radius: 4px;
     font-family: var(--main-text-font);
 }
-
 .pay-bottom {
     margin: 40px;
     border-top: 1px solid #c0bbbb;
     text-align: center;
 }
-
 .pay-bottom p {
     font-size: 12px;
     color: #dddddd;
 }
-
 .container-right {
     background-color: #f0f0f0;
     width: 40%;
     /* overflow: scroll;
      */
 }
-
 /* .container-right::-webkit-scrollbar {
     width: 10px;
   } */
@@ -464,25 +404,23 @@ input {
     width: 90%;
 
 }
-
 .san-pham {
     padding-top: 60px;
     height: 40%;
     border-bottom: 1px solid #c0bbbb;
 }
-
 .sp {
     padding-bottom: 20px;
 
 
-}
 
+}
 .sp-img {
     flex: 1;
     width: 70px;
     height: 70px;
     border: 1px solid #c0bbbb;
-    text-align: center;
+    text-align:center;
     border-radius: 4px;
     content: '';
     display: block;
@@ -490,25 +428,22 @@ input {
     border-radius: 8px;
 
 }
-
-.sp-img img {
+.sp-img img{
     width: 50px;
     height: 69px;
 }
-
 .quatity {
     font-size: 0.85714em;
     font-weight: 500;
     white-space: nowrap;
     padding: 0.15em 0.65em;
     border-radius: 2em;
-    background-color: rgba(153, 153, 153, 0.9);
+    background-color: rgba(153,153,153,0.9);
     color: #fff;
     position: absolute;
     z-index: 2;
     margin-left: 50px;
 }
-
 .ten-sp {
     flex: 1;
     margin-left: 90px;
@@ -516,19 +451,16 @@ input {
 
 
 }
-
 .ten-sp p:first-child {
     font-size: 15px;
     font-family: var(--main-text-font);
     margin-top: 6px;
     color: #333;
 }
-
 .ten-sp p {
     font-size: 12px;
     color: #c2bdbd;
 }
-
 .magiamgia {
     width: 100%;
     padding: 20px 0;
@@ -536,14 +468,12 @@ input {
     border-bottom: 1px solid #c0bbbb;
 
 }
-
 .nhap-ma {
     width: 65%;
 
 
 }
-
-.nhap-ma input {
+.nhap-ma  input{
     width: 100%;
     padding: 10px 12px;
     justify-content: space-between;
@@ -554,12 +484,10 @@ input {
 
 
 }
-
 .button-use {
     width: 35%;
     padding-left: 30px;
 }
-
 .button-use button {
     width: 100%;
     padding: 10px 12px;
@@ -572,17 +500,14 @@ input {
     font-family: var(--main-text-font);
 
 }
-
 .gia-tam {
     width: 100%;
     border-bottom: 1px solid #c0bbbb;
 
 }
-
 .the-p {
     flex: 2;
 }
-
 .the-p p:first-child {
     padding-top: 25px;
     color: #c0bbbb;
@@ -593,7 +518,6 @@ input {
 .price {
     font-size: 14px;
 }
-
 .tong-tien {
     width: 100%;
     padding-top: 25px;
@@ -605,55 +529,49 @@ input {
     flex: 2;
     font-size: 16px;
 }
-
 .vnd {
     padding-top: 10px;
     font-size: 12px;
     color: #c0bbbb;
     padding-right: 10px;
 }
-
+.tien {
+    font-size: 18px;
+    font-weight: 100px;
+}
 .inline {
     padding-left: 40px;
 }
-
-.inline li {
+.inline li{
     padding-left: 30px;
 }
-
 .inline a {
     font-size: 13px;
     color: black;
 }
 
 /*--------------------------- mobile---------------------- */
-@media only screen and (max-width: 48em) {
+@media only screen and (max-width:48em) {
     .between {
         margin: 20px;
     }
-
     .left {
-        display: none;
+        display:none;
     }
-
     .content a {
         width: 50%;
     }
-
     .right {
         padding: 0;
         width: 100%;
     }
-
-    .right-top {
+    .right-top{
         flex-direction: column-reverse;
         text-align: center;
     }
-
-    .name {
+    .name{
         width: 100%;
     }
-
     .name select {
         border: 1px solid #dddddd;
         background-color: #eeee;
@@ -662,16 +580,13 @@ input {
     .content-item img {
         width: 100%;
     }
-
     .content-item h1 {
         font-size: 14px;
     }
-
     .pagination {
         width: 50%;
     }
-
-    .list-inline {
+    .list-inline{
         display: none;
     }
 
@@ -679,88 +594,69 @@ input {
     .body-pay {
         width: 100%;
     }
-
     .topic h1 {
         text-align: center;
 
     }
-
-    .topic {
+    .topic{
         padding-left: 20px;
     }
-
     .dang-nhap {
         padding-left: 5px;
     }
-
-    .container {
+    .container{
         width: 100%;
         flex-direction: column;
     }
-
     .container-left {
         border: none;
         width: 100%;
     }
-
     .container-right {
         width: 100%;
     }
-
-    .pay-bottom {
+    .pay-bottom{
         display: none;
     }
-
-    .left-button {
+    .left-button{
         flex-direction: column-reverse;
         text-align: center;
     }
-
     .topic p {
         display: none;
     }
-
     .topic span {
         display: none;
     }
-
     .thongtin {
         flex-direction: column;
     }
-
     .mail {
         width: 100%;
     }
-
     .sdt {
         width: 100%;
     }
-
     .button-pay {
         width: 100%;
     }
-
     .gio-hang {
         padding-top: 10px;
     }
 
 }
-
 /*----------------------------------------------- tablet ---------------------- */
-@media only screen and (min-width: 48em) and (max-width: 64em) {
+@media only screen and (min-width:48em) and (max-width:64em) {
 
-    .header-left {
+    .header-left{
         display: none;
     }
-
     .between {
         margin: 20px;
     }
-
     .left {
-        display: none;
+        display:none;
     }
-
     .content a {
         width: 33.333%;
     }
@@ -769,53 +665,43 @@ input {
         padding: 0;
         width: 100%;
     }
-
-    .right-top {
+    .right-top{
         flex-direction: column-reverse;
         text-align: center;
 
     }
-
-    .name {
+    .name{
         width: 100%;
     }
-
     .name select {
         border: 1px solid #dddddd;
         background-color: #eeee;
     }
-
     .content-item img {
         width: 100%;
     }
-
     .content-item h1 {
         font-size: 14px;
     }
-
     .content-item h1 {
         font-size: 13px;
     }
-
     .list-inline {
         width: 100%;
         text-align: center;
     }
-
     /* ------------------pay------------------------------ */
+
     .topic h1 {
         width: 100%;
 
     }
-
-    .container {
+    .container{
         flex-direction: column;
     }
-
     .container-left {
         width: 100%;
     }
-
     .container-right {
         width: 100%;
     }
